tests/samples/negative/types/reference_return_tuple_local.ax
module reference_return_tuple_local;

fn bad() -> (&i32, &i32) {
    let value: i32 = 1;
    return (&value, &value);
}

fn main() -> i32 {
    return 0;
}
